resources/style3.css
.lb-overlay{
	width: 0px;
	height: 0px;
	position: fixed;
	overflow: hidden;
	left: 0px;
	top: 0px;
	padding: 0px;
	z-index: 666;
	text-align: center;
	background: rgb(200,200,200);
}
.lb-overlay > div{
	position: relative;
	color: rgba(27,54,81,0.8);
	width: 550px;
	height: 80px;
	margin: 40px auto 0px auto;
}
.lb-overlay div h3,
.lb-overlay div p{
	padding: 0px 20px;
	width: 200px;
	height: 60px;
}
.lb-overlay div h3{
	float: left;
	text-align: right;
	border-right: 1px solid rgba(27,54,81,0.4);
}
.lb-overlay div h3 span,
.lb-overlay div p{
}
.lb-overlay div h3 span{
	display: block;
	line-height: 6px;
}
.lb-overlay div p{
	text-align: left;
	float: left;
	width: 260px;
}
.lb-overlay a.lb-close{
	z-index: 999;
	color: #fff;
	position: absolute;
	top: 43px;
	left: 50%;
	width: 50px;
	height: 23px;
	overflow: hidden;
	margin-left: -25px;
}
.lb-overlay img{
	/* height: 100%; For Opera max-height does not seem to work */
	max-height: 100%;
	position: relative;
}
.lb-prev, .lb-next{
	position: absolute;
	top: -32px;
	width: 24px;
	height: 25px;
	left: 50%;
}
.lb-prev:hover, .lb-next:hover{
}
.lb-prev{
	margin-left: -30px;
}
.lb-next{
	margin-left: 6px;
}
.lb-overlay:target {
	width: auto;
	height: auto;
	bottom: 0px;
	right: 0px;
	padding: 80px 100px 120px 100px;
}
.lb-overlay:target img,
.lb-overlay:target a.lb-close{
}
/* 
	100% Height for Opera as the max-height seems to be ignored, not optimal for large screens 
	http://bricss.net/post/11230266445/css-hack-to-target-opera 
*/
x:-o-prefocus, .lb-overlay img {
    height: 100%;
}

